fix(fu-406): fixed truncate in flexbox
add new extend in v3 _vars.scss '%truncate-flex-child' for truncate text in flex child element
example:
```
.flex-child{
    @extend %truncate-flex-child;
}
```

--- a/projects/fusion-ui/components/dropdown-option/v3/dropdown-option.component.scss
+++ b/projects/fusion-ui/components/dropdown-option/v3/dropdown-option.component.scss
@@ -26,7 +26,8 @@
         @extend %image-masked;
     }
 
-    .text {
+    .fu-text-content {
+        @extend %truncate-flex-child;
         .sub-text-container{
             line-height: 13px;
             color: $fu-light-900;
