--- a/projects/fusion-ui/components/dropdown-select/v3/dropdown-select.component.scss
+++ b/projects/fusion-ui/components/dropdown-select/v3/dropdown-select.component.scss
@@ -47,6 +47,7 @@ $headerSmallHeight: 32px;
 
             .placeholderText{
                 line-height: initial;
+                @extend %truncate-flex-child;
             }
         }
 
